--- a/src/styles/pages/Header.css
+++ b/src/styles/pages/Header.css
@@ -32,7 +32,7 @@
   height: var(--small-header-height);
 }
 
-.header_gallery::after {
+/* .header_gallery::after {
   position: absolute;
   top: 0;
   left: 0;
@@ -43,7 +43,7 @@
   background-color: #000;
   opacity: 0.1;
   z-index: 0;
-}
+} */
 
 .image_text {
   width: 100%;
