--- a/src/styles/pages/About.css
+++ b/src/styles/pages/About.css
@@ -25,6 +25,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  color: #161616;
 }
 
 .about .text_container h3 {
@@ -32,10 +33,40 @@
 }
 
 .about .text_container p {
-  margin-bottom: 20px;
   line-height: 1.4;
   font-family: "Lato", sans-serif;
-  text-align: justify;
+  text-align: center;
+}
+
+.about .p_gabinet {
+  display: block;
+  margin: 5px 0 25px 0;
+}
+
+.about .link_gabinet {
+  position: relative;
+  background: linear-gradient(to right, rgb(0, 174, 255), rgb(0, 174, 255) 50%, #161616 50%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  background-position: 100%;
+  transition: background-position 350ms ease;
+}
+
+.about .link_gabinet:hover {
+  background-position: 0 100%;
+}
+
+.about .link_gabinet::after {
+  position: absolute;
+  left: 0%;
+  bottom: -10%;
+  display: block;
+  content: "";
+  width: 100%;
+  margin: 0 auto;
+  border-bottom: 2px solid rgb(75, 198, 255);
 }
 
 @media (min-width: 1224px) {
