--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ html {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #fff;
 }
 
 h1,
@@ -43,6 +44,7 @@ h6 {
 .offer,
 .gallery {
   margin: 0 auto;
+  background-color: #fff;
 }
 
 .separating_line {
